--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,14 @@ authors = ["Samuel Boyden <sam@stboyden.com>"]
 [dependencies]
 anyhow = "1.0.68"
 axum = "0.6.1"
+ccash-rs = { version = "2.0.0-beta", features = ["interpret_endpoint_errors_as_false"] }
+# ccash-rs = { path = "../ccash-rs" }
+chrono = "0.4.23"
+ctrlc = { version = "3.2.4", features = ["termination"] }
 directories = "4.0.1"
+once_cell = "1.16.0"
 serde = { version = "1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
 tokio = { version = "1.23.0", features = ["full"] }
-tracing = { version = "0.1.37", features = ["release_max_level_error", "max_level_info"] }
+tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
