--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,9 @@ flate2 = "1.0.25"
 once_cell = "1.16.0"
 parking_lot = { version = "0.12.1", features = ["serde", "send_guard"] }
 rayon = "1.6.1"
-serde = { version = "1.0.151", features = ["derive"] }
+serde = { version = "1.0.151", features = ["derive", "rc"] }
 serde_json = "1.0.91"
 tokio = { version = "1.23.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+uuid = { version = "1.2.2", features = ["v4", "serde", "macro-diagnostics", "fast-rng"] }
