--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,9 @@ authors = ["Samuel Boyden <sam@stboyden.com>"]
 [dependencies]
 anyhow = "1.0.68"
 axum = "0.6.1"
-ccash-rs = { version = "2.0.0-beta", features = [
-    "interpret_endpoint_errors_as_false",
-] }
-# ccash-rs = { path = "../ccash-rs" }
-chrono = "0.4.23"
+base64 = "0.20.0"
+ccash-rs = "2.0.0-beta"
+chrono = { version = "0.4.23", features = ["serde"] }
 ctrlc = { version = "3.2.4", features = ["termination"] }
 dashmap = { version = "5.4.0", features = ["serde", "rayon"] }
 directories = "4.0.1"
@@ -24,6 +22,13 @@ rayon = "1.6.1"
 serde = { version = "1.0.151", features = ["derive", "rc"] }
 serde_json = "1.0.91"
 tokio = { version = "1.23.0", features = ["full"] }
+tower = "0.4.13"
+tower-http = { version = "0.3.5", features = ["trace"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-uuid = { version = "1.2.2", features = ["v4", "serde", "macro-diagnostics", "fast-rng"] }
+uuid = { version = "1.2.2", features = [
+    "v4",
+    "serde",
+    "macro-diagnostics",
+    "fast-rng",
+] }
